# dataset-parser

./: .gitignore  README.md  main.py  pyproject.toml  rerollout_before_after.txt  rerollout_fixed_proof.json  rerollout_forced_before_after.txt  rerollout_proof.json  rerollout_proof_proper.json  rerollout_with_thinking.json  textual_plan.md  utils.py
docs/: architecture.md  cli.md  data-formats.md  data-splitter.md  parser-finale.md  record-structure.md  tui.md  verify-datasets.md
env-eval/: metadata.json  results.jsonl
graveyard_of_plans/: data_splitter.md  outputting_parsed_content.md  plan_3_lets_do_it_babe.md
plans/active-plans/: fixing-sigkill-crash.md  nemotronagenticv2-adapter.md
plans/active_plans/: data-mix.md  generalize-data-table-format.md  improve-code-quality.md  split-screen-comparison.md  testplan.md
plans/graveyard_of_plans/: PLAN_directory_input_feature.md  data_gen_plan.md
scripts/: data_splitter.py  main.py  parser_finale.py  rerollout.py  rerollout_curl_example.sh  rerollout_demo.sh  rerollout_forced.py  rerollout_full.py  rerollout_proper.py  rerollout_simple.py  upload_to_hf.py  usage.md
scripts/data_formats/: __init__.py  (+8 more)
tests/: conftest.py  test_cli.py  test_content_integrity.py  test_csv_loader.py  test_data_splitter.py  test_dataset_mixer.py  test_dynamic_schema.py  test_format_detection.py  test_formatters.py  test_json_loader.py  test_load_jsonl.py  test_multiformat_tui.py  test_parquet_loader.py  test_process_messages.py  test_process_record.py  test_real_data.py  test_real_data_multiformat.py  test_schema_normalizer.py
(+58 files in other folders)
