[project]
name = "dataset-parser"
version = "0.1.0"
description = "A toolkit for exploring and transforming datasets containing AI conversation data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=7.3.0",
    "pyarrow>=15.0.0",
    "huggingface-hub>=1.3.2",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0.0"]
all = ["pyarrow>=15.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
